--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
+    "@angular/fire": "^7.5.0",
     "@angular/forms": "^15.0.0",
     "@angular/material": "^15.0.3",
     "@angular/platform-browser": "^15.0.0",
@@ -24,6 +25,7 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
+    "firebase": "^9.15.0",
     "jquery": "^3.6.3",
     "node-sass": "^8.0.0",
     "rxjs": "~7.5.0",
